<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="10dp"
    android:layout_centerVertical="true"
    android:background="@color/rebeccapurple"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueciolet"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/greeting"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@color/gainsboro"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/nk"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginTop="17dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logo_stta"
            android:layout_marginTop="7dp"
            android:adjustViewBounds="true"/>

        <RelativeLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/nim"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="NIM"
                android:inputType="number"
                android:layout_centerHorizontal="true"
                android:background="@color/white"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:layout_below="@+id/nim"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/white"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="10dp"
                android:text="@string/signup"
                android:layout_centerInParent="true"
                android:background="@color/darkviolet"
                android:textColor="@color/white"/>
            <TextView
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="12dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_below="@+id/btn_login"
            android:gravity="left"/>
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12dp"
                android:text="@string/lupa_pass"
                android:textColor="@color/white"
                android:layout_below="@+id/btn_login"
                android:gravity="right"/>
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_marginTop="20dp">
        </View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="Copyright of STTA 2019"/>
    </LinearLayout>

</LinearLayout>